EvaluateSolution 핸들러 추가
